--- a/nasa-project-fe/package.json
+++ b/nasa-project-fe/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/pickers": "^3.2.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/styled-components": "^5.1.1",
+    "autobind-decorator": "^2.4.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "install": "^0.13.0",
     "npm": "^6.14.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
