--- a/nasa-project-fe/package.json
+++ b/nasa-project-fe/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.1",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
@@ -18,8 +20,10 @@
     "npm": "^6.14.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
