--- a/nasa-project-fe/package.json
+++ b/nasa-project-fe/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
+    "@types/react": "^16.9.43",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.1",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.19.2",
@@ -25,6 +27,7 @@
     "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
